packages/fuels-macros/tests/ui/setup_program_test/unknown_options_value.rs
use fuels_macros::setup_program_test;

setup_program_test!(Options(profile = "not_a_profile"));

fn main() {}
